--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.11.0
 Django==5.2.8
+django-filter==24.2
+django-widget-tweaks==1.5.0
 pillow==12.0.0
 psycopg==3.3.2
 psycopg2-binary==2.9.11
