--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-widget-tweaks==1.5.0
 pillow==12.0.0
 psycopg==3.3.2
 psycopg2-binary==2.9.11
+python-dotenv==1.0.1
 sqlparse==0.5.3
 typing_extensions==4.15.0
 requests
